--- a/index.html
+++ b/index.html
@@ -1,2 +1,38 @@
-<h1>GRIT EduTech</h1>
-<p>사이트 준비 중...</p>
+<!doctype html>
+<html lang="ko">
+<head>
+  <meta charset="utf-8" />
+  <title>GRIT EduTech – 로그인 테스트</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Firebase CDN (compat 버전: 번들러 없이 사용 가능) -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+
+  <script src="./app.js" defer></script>
+
+  <style>
+    body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;max-width:560px;margin:40px auto;padding:0 16px;}
+    label{display:block;margin:12px 0 4px;}
+    input{width:100%;padding:10px;border:1px solid #ccc;border-radius:8px}
+    button{margin-top:12px;padding:10px 14px;border:0;border-radius:8px;background:#111;color:#fff;cursor:pointer}
+    #who{margin:12px 0 16px;color:#444}
+  </style>
+</head>
+<body>
+  <h1>GRIT EduTech</h1>
+  <div id="who">상태: 확인 중…</div>
+
+  <label>이메일</label>
+  <input id="email" placeholder="you@example.com" />
+
+  <label>비밀번호</label>
+  <input id="pw" type="password" placeholder="••••••••" />
+
+  <div>
+    <button id="signup">회원가입</button>
+    <button id="login">로그인</button>
+    <button id="logout" style="display:none">로그아웃</button>
+  </div>
+</body>
+</html>
