feat: mobile hamburger nav + instructor detail page + enhanced consult page

--- a/story.html
+++ b/story.html
@@ -11,13 +11,18 @@
     <div class="nav">
       <div class="left"><a href="/"><img src="./assets/logo.png" alt="로고"></a></div>
       <div class="center">
-        <nav class="menu">
+        <nav class="menu" id="mainMenu">
           <a href="/">그릿에듀</a>
           <a href="/story.html" class="active">GRIT EDU STORY</a>
           <a href="/instructors.html">강사진</a>
           <a href="/album.html">앨범</a>
           <a href="/consult.html">상담 예약</a>
         </nav>
+      </div>
+      <div class="right">
+        <button id="btnHamburger" class="hamburger" aria-label="메뉴 열기">
+          <span></span><span></span><span></span>
+        </button>
       </div>
     </div>
   </header>
