--- a/consult.html
+++ b/consult.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>GRIT EduTech | 상담 예약</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/main.css" />
+  <style>
+    /* 페이지 전용 보조 스타일 */
+    .hero {border:1px solid var(--border); border-radius:16px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04)}
+    .info-grid {display:grid; grid-template-columns:1fr 1fr; gap:16px; margin-top:16px}
+    .card-soft {border:1px solid var(--border); border-radius:14px; background:#fff; padding:16px}
+    .cta-row {display:flex; flex-wrap:wrap; gap:10px; margin-top:12px}
+    .btn.link {text-decoration:none; display:inline-block}
+    .list {margin:0; padding-left:18px}
+    .list li {margin:4px 0}
+    .map {border:1px solid var(--border); border-radius:16px; overflow:hidden}
+    @media (max-width:860px){
+      .info-grid {grid-template-columns:1fr}
+      .map iframe {height:320px}
+    }
+  </style>
 </head>
 <body>
+  <!-- HEADER -->
   <header>
     <div class="nav">
-      <div class="left"><a href="/"><img src="./assets/logo.png" alt="로고"></a></div>
+      <div class="left"><a href="/"><img src="./assets/logo.png" alt="GRIT 로고"></a></div>
       <div class="center">
-        <nav class="menu">
+        <nav class="menu" id="mainMenu">
           <a href="/">그릿에듀</a>
           <a href="/story.html">GRIT EDU STORY</a>
           <a href="/instructors.html">강사진</a>
@@ -19,19 +35,73 @@
           <a href="/consult.html" class="active">상담 예약</a>
         </nav>
       </div>
+      <div class="right">
+        <button id="btnHamburger" class="hamburger" aria-label="메뉴 열기">
+          <span></span><span></span><span></span>
+        </button>
+      </div>
     </div>
   </header>
 
   <main class="container">
-    <h1>상담 예약</h1>
-    <p>문의 및 예약은 전화 또는 온라인 양식을 통해 진행됩니다.</p>
-    <ul>
-      <li>📞 대표전화: 042-XXX-XXXX</li>
-      <li>📍 위치: 대전광역시 ○○구 ○○로 123, GRIT EDU</li>
-      <li>⏰ 상담 가능 시간: 평일 10:00~19:00 / 토요일 10:00~15:00</li>
-    </ul>
+    <h1 style="margin:8px 0 14px">상담 예약</h1>
+
+    <!-- 안내 HERO -->
+    <section class="hero">
+      <p style="margin:0">
+        <b>전화로 미리 상담 시간 예약</b> 후 방문하여 상담 가능합니다.<br/>
+        <span style="color:var(--muted)">통화 가능 시간 : 평일 3–10pm / 주말 12–10pm</span>
+      </p>
+
+      <div class="cta-row">
+        <a class="btn primary link" href="tel:028090611">☏ 02-809-0611 전화하기</a>
+        <a class="btn link" target="_blank" rel="noopener" href="https://www.instagram.com/grit_edu_seoul/">Instagram</a>
+        <a class="btn link" target="_blank" rel="noopener" href="https://www.youtube.com/@gritedu_official?feature=shared">YouTube</a>
+      </div>
+    </section>
+
+    <!-- 주소/영업시간/채널 -->
+    <section class="info-grid">
+      <div class="card-soft">
+        <h3 style="margin:0 0 8px">주소</h3>
+        <p style="margin:0 0 8px">
+          서울특별시 금천구 시흥대로47길 28-5<br/>
+          남서울교육문화센터 5층 그릿에듀학원
+        </p>
+        <div class="cta-row">
+          <a class="btn link" target="_blank" rel="noopener"
+             href="https://maps.google.com/?q=%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5">
+            지도에서 보기
+          </a>
+          <a class="btn link" href="mailto:info@grit-edu.example">이메일 문의</a>
+        </div>
+      </div>
+
+      <div class="card-soft">
+        <h3 style="margin:0 0 8px">상담/통화 가능 시간</h3>
+        <ul class="list">
+          <li>평일: 15:00 ~ 22:00</li>
+          <li>주말: 12:00 ~ 22:00</li>
+        </ul>
+        <p style="margin-top:8px;color:var(--muted)">※ 예약 후 방문하시면 대기 없이 안내해드립니다.</p>
+      </div>
+    </section>
+
+    <!-- 지도 -->
+    <section style="margin-top:16px" class="map">
+      <!-- 주소 기반 임베드 지도 (간단 쿼리 방식) -->
+      <iframe
+        title="GRIT EduTech 위치"
+        width="100%" height="420"
+        style="border:0"
+        loading="lazy" allowfullscreen
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps?q=%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5&output=embed">
+      </iframe>
+    </section>
   </main>
 
   <footer><div class="inner">© 2025 GRIT EduTech</div></footer>
+  <script type="module" src="./assets/js/app.js"></script>
 </body>
 </html>
