--- a/instructor.html
+++ b/instructor.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>강사 상세 | GRIT EduTech</title>
-  <link rel="stylesheet" href="./assets/css/main.css"/>
+  <link rel="stylesheet" href="./assets/css/main.css" />
+  <style>
+    .detail{display:grid;grid-template-columns:320px 1fr;gap:24px;align-items:start}
+    .detail .photo{border:1px solid var(--border);border-radius:16px;background:#fff;overflow:hidden}
+    .detail .photo img{width:100%;height:360px;object-fit:contain;background:#fff}
+    @media (max-width:860px){ .detail{grid-template-columns:1fr} }
+  </style>
 </head>
 <body>
   <header>
     <div class="nav">
-      <div class="left"><a href="/"><img src="./assets/logo.png" alt="GRIT 로고"></a></div>
+      <div class="left"><a href="/"><img src="./assets/logo.png" alt="GRIT 로고" /></a></div>
       <div class="center">
         <nav class="menu" id="mainMenu">
           <a href="/">그릿에듀</a>
@@ -25,52 +31,37 @@
     </div>
   </header>
 
-  <main class="container" id="detailRoot">
-    <!-- JS로 내용 채움 -->
-  </main>
-
+  <main class="container" id="detailRoot"></main>
   <footer><div class="inner">© 2025 GRIT EduTech</div></footer>
 
   <script type="module">
     import { INSTRUCTORS } from "./assets/js/data.instructors.js";
 
-    // 햄버거
+    // 모바일 메뉴 토글(옵션)
     const btnHamburger = document.getElementById('btnHamburger');
     const mainMenu = document.getElementById('mainMenu');
     btnHamburger?.addEventListener('click', ()=> mainMenu.classList.toggle('open'));
 
-    // 쿼리 파라미터
     const params = new URLSearchParams(location.search);
     const id = params.get('id');
     const data = INSTRUCTORS.find(i=>i.id===id);
 
     const root = document.getElementById('detailRoot');
     if(!data){
-      root.innerHTML = `<p>강사 정보를 찾을 수 없습니다.</p><p><a class="btn" href="/instructors.html">← 강사진 목록으로</a></p>`;
-    } else {
+      root.innerHTML = `<p>강사 정보를 찾을 수 없습니다.</p><p><a class="btn" href="/instructors.html">← 강사진 목록</a></p>`;
+    }else{
       root.innerHTML = `
-        <article class="detail" style="display:grid;grid-template-columns:320px 1fr;gap:24px;align-items:start">
-          <div class="card"><img src="${data.photo}" alt="${data.name}" style="width:100%;height:360px;object-fit:contain;background:#fff"></div>
+        <article class="detail">
+          <div class="photo"><img src="${data.photo}" alt="${data.name}" /></div>
           <div>
             <h1 style="margin:0 0 8px">${data.name} 선생님</h1>
-            <p style="color:#6b7280">${data.subject} · ${data.year}</p>
-            <p style="margin-top:12px">${data.bio||""}</p>
-
-            ${ (data.highlights?.length)
-              ? `<ul style="margin-top:12px">${data.highlights.map(h=>`<li>${h}</li>`).join("")}</ul>`
-              : "" }
-
+            <p style="color:var(--muted)">${data.subject} · ${data.year}</p>
+            ${data.bio ? `<p style="margin-top:12px">${data.bio}</p>` : ``}
+            ${data.highlights ? `<ul style="margin-top:10px">${data.highlights.map(h=>`<li>${h}</li>`).join("")}</ul>` : ``}
             <div style="margin-top:16px;display:flex;gap:8px">
               <a class="btn" href="/instructors.html">← 강사진 목록</a>
               <a class="btn primary" href="/consult.html">상담 예약</a>
             </div>
-
-            ${ data.youtube
-                ? `<div style="margin-top:18px">
-                     <h3 style="margin:8px 0">샘플 강의</h3>
-                     <iframe width="560" height="315" src="${data.youtube}" title="YouTube video" frameborder="0" allowfullscreen style="max-width:100%"></iframe>
-                   </div>`
-                : "" }
           </div>
         </article>
       `;
