--- a/consult.html
+++ b/consult.html
@@ -15,6 +15,9 @@
     .list {margin:0; padding-left:18px}
     .list li {margin:4px 0}
     .map {border:1px solid var(--border); border-radius:16px; overflow:hidden}
+    .sns-icons {display:flex; gap:12px; align-items:center}
+    .sns-icon {width:32px; height:32px; border-radius:50%; background:#f5f5f5; display:flex; align-items:center; justify-content:center; text-decoration:none; color:#666; transition:all .2s}
+    .sns-icon:hover {background:var(--brand); color:#fff; transform:scale(1.1)}
     @media (max-width:860px){
       .info-grid {grid-template-columns:1fr}
       .map iframe {height:320px}
@@ -55,12 +58,14 @@
 
       <div class="cta-row">
         <a class="btn primary link" href="tel:028090611">☏ 02-809-0611 전화하기</a>
-        <a class="btn link" target="_blank" rel="noopener" href="https://www.instagram.com/grit_edu_seoul/">Instagram</a>
-        <a class="btn link" target="_blank" rel="noopener" href="https://www.youtube.com/@gritedu_official?feature=shared">YouTube</a>
+        <div class="sns-icons">
+          <a class="sns-icon" target="_blank" rel="noopener" href="https://www.instagram.com/grit_edu_seoul/" title="Instagram">📷</a>
+          <a class="sns-icon" target="_blank" rel="noopener" href="https://www.youtube.com/@gritedu_official?feature=shared" title="YouTube">📺</a>
+        </div>
       </div>
     </section>
 
-    <!-- 주소/영업시간/채널 -->
+    <!-- 주소/영업시간 -->
     <section class="info-grid">
       <div class="card-soft">
         <h3 style="margin:0 0 8px">주소</h3>
@@ -70,10 +75,9 @@
         </p>
         <div class="cta-row">
           <a class="btn link" target="_blank" rel="noopener"
-             href="https://maps.google.com/?q=%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5">
-            지도에서 보기
+             href="https://map.naver.com/v5/search/%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5">
+            네이버 지도에서 보기
           </a>
-          <a class="btn link" href="mailto:info@grit-edu.example">이메일 문의</a>
         </div>
       </div>
 
@@ -87,16 +91,15 @@
       </div>
     </section>
 
-    <!-- 지도 -->
+    <!-- 네이버 지도 -->
     <section style="margin-top:16px" class="map">
-      <!-- 주소 기반 임베드 지도 (간단 쿼리 방식) -->
       <iframe
         title="GRIT EduTech 위치"
         width="100%" height="420"
         style="border:0"
         loading="lazy" allowfullscreen
         referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps?q=%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5&output=embed">
+        src="https://map.naver.com/v5/embed?c=126.8969,37.4563,17,0,0,0,dh">
       </iframe>
     </section>
   </main>
