--- a/album.html
+++ b/album.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>GRIT EduTech | 앨범</title>
   <link rel="stylesheet" href="./assets/css/main.css">
+  <style>
+    .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:12px}
+    .gallery .ph{border:1px solid var(--border);border-radius:12px;overflow:hidden;background:#fff}
+    .gallery img{width:100%;height:200px;object-fit:cover;display:block}
+    .album-tabs{display:flex;gap:8px;margin:10px 0 14px;flex-wrap:wrap}
+    .album-tabs .tab{padding:8px 12px;border:1px solid var(--border);border-radius:999px;background:#fff;cursor:pointer;font-weight:600}
+    .album-tabs .tab.active{background:var(--brand);border-color:var(--brand);color:#fff}
+  </style>
 </head>
 <body>
   <header>
@@ -19,19 +27,44 @@
           <a href="/consult.html">상담 예약</a>
         </nav>
       </div>
-      <div class="right">
-        <button id="btnHamburger" class="hamburger" aria-label="메뉴 열기">
-          <span></span><span></span><span></span>
-        </button>
-      </div>
     </div>
   </header>
 
   <main class="container">
-    <h1>GRIT EDU 앨범</h1>
-    <p>행사, 수업, 현장 활동 등 그릿에듀의 생생한 순간들을 만나보세요.</p>
+    <h1>앨범</h1>
+
+    <!-- 카테고리 탭 -->
+    <div class="album-tabs" id="albumTabs">
+      <button class="tab active" data-cat="interior">학원 내부</button>
+      <button class="tab" data-cat="students" disabled title="준비중">학생 공부(준비중)</button>
+      <button class="tab" data-cat="events" disabled title="준비중">행사(준비중)</button>
+    </div>
+
+    <!-- 갤러리 -->
+    <div class="gallery" id="gallery">
+      <!-- 학원 내부 4장 -->
+      <div class="ph" data-cat="interior"><img src="./assets/album/grit1.jpeg" alt="GRIT 내부1"></div>
+      <div class="ph" data-cat="interior"><img src="./assets/album/grit2.jpeg" alt="GRIT 내부2"></div>
+      <div class="ph" data-cat="interior"><img src="./assets/album/grit3.jpeg" alt="GRIT 내부3"></div>
+      <div class="ph" data-cat="interior"><img src="./assets/album/grit4.jpeg" alt="GRIT 내부4"></div>
+    </div>
   </main>
 
   <footer><div class="inner">© 2025 GRIT EduTech</div></footer>
+
+  <script type="module">
+    // 간단 탭 필터
+    const tabs = document.getElementById('albumTabs');
+    const items = [...document.querySelectorAll('#gallery .ph')];
+    tabs.addEventListener('click', (e)=>{
+      const btn = e.target.closest('.tab'); if(!btn || btn.disabled) return;
+      tabs.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));
+      btn.classList.add('active');
+      const cat = btn.dataset.cat;
+      items.forEach(el=>{
+        el.style.display = (cat==='all' || el.dataset.cat===cat) ? '' : 'none';
+      });
+    });
+  </script>
 </body>
 </html>
