--- a/consult.html
+++ b/consult.html
@@ -6,26 +6,15 @@
   <title>GRIT EduTech | 상담 예약</title>
   <link rel="stylesheet" href="./assets/css/main.css" />
   <style>
-    /* 페이지 전용 보조 스타일 */
     .hero {border:1px solid var(--border); border-radius:16px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04)}
     .info-grid {display:grid; grid-template-columns:1fr 1fr; gap:16px; margin-top:16px}
     .card-soft {border:1px solid var(--border); border-radius:14px; background:#fff; padding:16px}
     .cta-row {display:flex; flex-wrap:wrap; gap:10px; margin-top:12px}
-    .btn.link {text-decoration:none; display:inline-block}
-    .list {margin:0; padding-left:18px}
-    .list li {margin:4px 0}
     .map {border:1px solid var(--border); border-radius:16px; overflow:hidden}
-    .sns-icons {display:flex; gap:12px; align-items:center}
-    .sns-icon {width:32px; height:32px; border-radius:50%; background:#f5f5f5; display:flex; align-items:center; justify-content:center; text-decoration:none; color:#666; transition:all .2s}
-    .sns-icon:hover {background:var(--brand); color:#fff; transform:scale(1.1)}
-    @media (max-width:860px){
-      .info-grid {grid-template-columns:1fr}
-      .map iframe {height:320px}
-    }
+    @media (max-width:860px){ .info-grid {grid-template-columns:1fr} .map iframe {height:320px} }
   </style>
 </head>
 <body>
-  <!-- HEADER -->
   <header>
     <div class="nav">
       <div class="left"><a href="/"><img src="./assets/logo.png" alt="GRIT 로고"></a></div>
@@ -38,34 +27,40 @@
           <a href="/consult.html" class="active">상담 예약</a>
         </nav>
       </div>
-      <div class="right">
-        <button id="btnHamburger" class="hamburger" aria-label="메뉴 열기">
-          <span></span><span></span><span></span>
-        </button>
-      </div>
+      <div class="right"></div>
     </div>
   </header>
 
   <main class="container">
     <h1 style="margin:8px 0 14px">상담 예약</h1>
 
-    <!-- 안내 HERO -->
     <section class="hero">
       <p style="margin:0">
         <b>전화로 미리 상담 시간 예약</b> 후 방문하여 상담 가능합니다.<br/>
         <span style="color:var(--muted)">통화 가능 시간 : 평일 3–10pm / 주말 12–10pm</span>
       </p>
-
       <div class="cta-row">
-        <a class="btn primary link" href="tel:028090611">☏ 02-809-0611 전화하기</a>
-        <div class="sns-icons">
-          <a class="sns-icon" target="_blank" rel="noopener" href="https://www.instagram.com/grit_edu_seoul/" title="Instagram">📷</a>
-          <a class="sns-icon" target="_blank" rel="noopener" href="https://www.youtube.com/@gritedu_official?feature=shared" title="YouTube">📺</a>
-        </div>
+        <a class="btn primary" href="tel:028090611">☏ 02-809-0611 전화하기</a>
+
+        <!-- SNS Icon Buttons -->
+        <a class="icon-btn" target="_blank" rel="noopener" href="https://www.instagram.com/grit_edu_seoul/">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="#E4405F" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5z"/>
+            <circle fill="#fff" cx="12" cy="12" r="3.2"/>
+            <circle fill="#fff" cx="17.3" cy="6.7" r="1.2"/>
+          </svg>
+          Instagram
+        </a>
+        <a class="icon-btn" target="_blank" rel="noopener" href="https://www.youtube.com/@gritedu_official?feature=shared">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="#FF0000" d="M23 7.2a3 3 0 0 0-2.1-2.1C18.8 4.5 12 4.5 12 4.5s-6.8 0-8.9.6A3 3 0 0 0 1 7.2 47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8 3 3 0 0 0 2.1 2.1c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6a3 3 0 0 0 2.1-2.1A47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z"/>
+            <path fill="#fff" d="M10 15.5v-7l6 3.5-6 3.5z"/>
+          </svg>
+          YouTube
+        </a>
       </div>
     </section>
 
-    <!-- 주소/영업시간 -->
     <section class="info-grid">
       <div class="card-soft">
         <h3 style="margin:0 0 8px">주소</h3>
@@ -74,37 +69,33 @@
           남서울교육문화센터 5층 그릿에듀학원
         </p>
         <div class="cta-row">
-          <a class="btn link" target="_blank" rel="noopener"
-             href="https://map.naver.com/v5/search/%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5">
-            네이버 지도에서 보기
+          <!-- Naver: 새 탭으로 열기 -->
+          <a class="btn" target="_blank" rel="noopener"
+             href="https://map.naver.com/p/search/%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5">
+            네이버지도 열기
           </a>
         </div>
       </div>
 
       <div class="card-soft">
         <h3 style="margin:0 0 8px">상담/통화 가능 시간</h3>
-        <ul class="list">
+        <ul style="margin:0; padding-left:18px">
           <li>평일: 15:00 ~ 22:00</li>
           <li>주말: 12:00 ~ 22:00</li>
         </ul>
-        <p style="margin-top:8px;color:var(--muted)">※ 예약 후 방문하시면 대기 없이 안내해드립니다.</p>
       </div>
     </section>
 
-    <!-- 네이버 지도 -->
+    <!-- 화면 표시용 지도: Google Embed (네이버는 임베드 불가) -->
     <section style="margin-top:16px" class="map">
       <iframe
         title="GRIT EduTech 위치"
-        width="100%" height="420"
-        style="border:0"
-        loading="lazy" allowfullscreen
-        referrerpolicy="no-referrer-when-downgrade"
-        src="https://map.naver.com/v5/embed?c=126.8969,37.4563,17,0,0,0,dh">
+        width="100%" height="420" style="border:0" loading="lazy" allowfullscreen
+        src="https://www.google.com/maps?q=%EC%84%9C%EC%9A%B8%20%EA%B8%88%EC%B2%9C%EA%B5%AC%20%EC%8B%9C%ED%9D%A5%EB%8C%80%EB%A1%9C47%EA%B8%B8%2028-5%20%EB%82%A8%EC%84%9C%EC%9A%B8%EA%B5%90%EC%9C%A1%EB%AC%B8%ED%99%94%EC%84%BC%ED%84%B0%205%EC%B8%B5&output=embed">
       </iframe>
     </section>
   </main>
 
   <footer><div class="inner">© 2025 GRIT EduTech</div></footer>
-  <script type="module" src="./assets/js/app.js"></script>
 </body>
 </html>
