--- a/story.html
+++ b/story.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>GRIT EduTech | Story</title>
+  <title>그릿에듀 | 이야기</title>
   <link rel="icon" type="image/png" href="./assets/grit_icon.png">
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
@@ -34,7 +34,34 @@
     <p>2025년, "도전과 끈기(GRIT)"를 모토로, 과목별 전문 강사진과 함께 학생 개개인에게 최적화된 학습 경험을 제공합니다.</p>
   </main>
 
-  <footer><div class="inner">© 2025 GRIT EduTech</div></footer>
+  <footer>
+    <div class="footer-sns">
+      <!-- Instagram -->
+      <a href="https://www.instagram.com/grit_edu_seoul/" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
+          fill="none" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3.2" fill="none"
+          stroke="currentColor" stroke-width="2"/><circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/></svg>
+        인스타
+      </a>
+      <!-- YouTube -->
+      <a href="https://www.youtube.com/@gritedu_official?feature=shared" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23 7.2a3 3 0 0 0-2.1-2.1C18.8 4.5 12 4.5 12 4.5s-6.8 0-8.9.6A3 3 0 0 0 1 7.2
+          47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
+          47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z" fill="none" stroke="currentColor" stroke-width="2"/>
+          <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/></svg>
+        유튜브
+      </a>
+      <!-- Naver Blog -->
+      <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener">
+        <svg viewBox="0 0 24 24" aria-hidden="true">
+          <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
+          <path d="M8 8v8h2.8l3.2-4.1V16H16V8h-2.8L10 12.1V8H8z" fill="currentColor"/>
+        </svg>
+        블로그
+      </a>
+    </div>
+    <div class="inner">© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</div>
+  </footer>
 
   <!-- 로그인 모달 -->
   <dialog id="loginDialog" class="modal">
