--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>그릿에듀 | 상담</title>
+  <link rel="icon" href="./assets/favicon.jpg" type="image/jpeg">
   <link rel="stylesheet" href="./assets/css/main.css" />
   <style>
     .hero {border:1px solid var(--border); border-radius:16px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04)}
@@ -21,7 +22,7 @@
       <div class="center">
         <nav class="menu" id="mainMenu">
           <a href="/">그릿에듀</a>
-          <a href="/story.html">그릿 에듀 이야기</a>
+          <a href="/story.html">이야기</a>
           <a href="/instructors.html">강사진</a>
           <a href="/gallery.html">갤러리</a>
           <a href="/contact.html" class="active">상담</a>
@@ -63,7 +64,6 @@
             <circle cx="12" cy="12" r="3.2" fill="none" stroke="currentColor" stroke-width="2"/>
             <circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/>
           </svg>
-          인스타
         </a>
 
         <!-- YouTube -->
@@ -75,7 +75,6 @@
                   fill="none" stroke="currentColor" stroke-width="2"/>
             <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/>
           </svg>
-          유튜브
         </a>
       </div>
     </section>
@@ -122,7 +121,6 @@
         <svg viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
           fill="none" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3.2" fill="none"
           stroke="currentColor" stroke-width="2"/><circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/></svg>
-        인스타
       </a>
       <!-- YouTube -->
       <a href="https://www.youtube.com/@gritedu_official?feature=shared" target="_blank" rel="noopener">
@@ -130,7 +128,6 @@
           47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
           47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z" fill="none" stroke="currentColor" stroke-width="2"/>
           <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/></svg>
-        유튜브
       </a>
       <!-- Naver Blog -->
       <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener">
@@ -138,7 +135,6 @@
           <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
           <path d="M8 8v8h2.8l3.2-4.1V16H16V8h-2.8L10 12.1V8H8z" fill="currentColor"/>
         </svg>
-        블로그
       </a>
     </div>
     <div class="inner">© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</div>
@@ -192,6 +188,10 @@
       <button id="doSignup" class="btn primary">가입하기</button>
     </div>
   </dialog>
+
+  <!-- 공통 스크립트: firebase 초기화 + auth UI -->
+  <script type="module" src="/assets/js/firebase.js"></script>
+  <script type="module" src="/assets/js/auth-ui.js"></script>
 
   <script type="module" src="./assets/js/app.js"></script>
 </body>
