--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
       <div class="center">
         <nav class="menu" id="mainMenu">
           <a href="/">그릿에듀</a>
-          <a href="/story.html">그릿 에듀 이야기</a>
+          <a href="/story.html">이야기</a>
           <a href="/instructors.html">강사진</a>
           <a href="/gallery.html" class="active">갤러리</a>
           <a href="/contact.html">상담</a>
@@ -82,21 +82,18 @@
       <svg viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
         fill="none" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3.2" fill="none"
         stroke="currentColor" stroke-width="2"/><circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/></svg>
-      인스타
     </a>
     <a href="https://www.youtube.com/@gritedu_official?feature=shared" target="_blank" rel="noopener">
       <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M23 7.2a3 3 0 0 0-2.1-2.1C18.8 4.5 12 4.5 12 4.5s-6.8 0-8.9.6A3 3 0 0 0 1 7.2
         47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
         47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z" fill="none" stroke="currentColor" stroke-width="2"/>
         <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/></svg>
-      유튜브
     </a>
     <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener">
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
         <path d="M8 8v8h2.8l3.2-4.1V16H16V8h-2.8L10 12.1V8H8z" fill="currentColor"/>
       </svg>
-      블로그
     </a>
   </div>
 
@@ -132,5 +129,58 @@
     document.querySelector('.lb-close').addEventListener('click', close);
     window.addEventListener('keydown',(e)=>{ if(e.key==='Escape') close(); });
   </script>
+
+  <!-- 로그인 모달 -->
+  <dialog id="loginDialog" class="modal">
+    <header>
+      <span>로그인</span>
+      <button data-close class="btn">닫기</button>
+    </header>
+    <div class="body">
+      <div>
+        <label for="loginEmail">이메일</label>
+        <input id="loginEmail" type="email" placeholder="you@example.com" autocomplete="email">
+      </div>
+      <div>
+        <label for="loginPassword">비밀번호</label>
+        <input id="loginPassword" type="password" placeholder="8자 이상" autocomplete="current-password">
+      </div>
+      <div id="loginError" class="error-text" style="color:#d00;font-size:13px;"></div>
+    </div>
+    <div class="actions">
+      <button id="btnSignup" class="btn">회원가입</button>
+      <button id="doLogin" class="btn primary">로그인</button>
+    </div>
+  </dialog>
+
+  <!-- 회원가입 모달 -->
+  <dialog id="signupDialog" class="modal">
+    <header>
+      <span>회원가입</span>
+      <button data-close class="btn">닫기</button>
+    </header>
+    <div class="body">
+      <div>
+        <label for="signupEmail">이메일</label>
+        <input id="signupEmail" type="email" placeholder="you@example.com" autocomplete="email">
+      </div>
+      <div>
+        <label for="signupPassword">비밀번호 (8자 이상)</label>
+        <input id="signupPassword" type="password" placeholder="8자 이상" autocomplete="new-password">
+      </div>
+      <div>
+        <label for="signupPassword2">비밀번호 확인</label>
+        <input id="signupPassword2" type="password" placeholder="다시 입력" autocomplete="new-password">
+      </div>
+      <div id="signupError" class="error-text" style="color:#d00;font-size:13px;"></div>
+    </div>
+    <div class="actions">
+      <button id="doSignup" class="btn primary">가입하기</button>
+    </div>
+  </dialog>
+
+  <!-- 공통 스크립트: firebase 초기화 + auth UI -->
+  <script type="module" src="/assets/js/firebase.js"></script>
+  <script type="module" src="/assets/js/auth-ui.js"></script>
 </body>
 </html>
