--- a/instructors.html
+++ b/instructors.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>그릿에듀 | 강사진</title>
-  <link rel="icon" type="image/png" href="./assets/grit_icon.png">
+  <link rel="icon" href="./assets/favicon.jpg" type="image/jpeg">
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
       <div class="center">
         <nav class="menu" id="mainMenu">
           <a href="/">그릿에듀</a>
-          <a href="/story.html">그릿 에듀 이야기</a>
+          <a href="/story.html">이야기</a>
           <a href="/instructors.html" class="active">강사진</a>
           <a href="/gallery.html">갤러리</a>
           <a href="/contact.html">상담</a>
@@ -40,7 +40,6 @@
         <svg viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"
           fill="none" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="12" r="3.2" fill="none"
           stroke="currentColor" stroke-width="2"/><circle cx="17.3" cy="6.7" r="1.2" fill="currentColor"/></svg>
-        인스타
       </a>
       <!-- YouTube -->
       <a href="https://www.youtube.com/@gritedu_official?feature=shared" target="_blank" rel="noopener">
@@ -48,7 +47,6 @@
           47 47 0 0 0 1 12a47 47 0 0 0 .1 4.8A3 3 0 0 0 3.2 19c2.1.6 8.8.6 8.8.6s6.8 0 8.9-.6A3 3 0 0 0 23 16.8
           47 47 0 0 0 23 12a47 47 0 0 0 0-4.8z" fill="none" stroke="currentColor" stroke-width="2"/>
           <polygon points="10,15.5 10,8.5 16,12" fill="currentColor"/></svg>
-        유튜브
       </a>
       <!-- Naver Blog -->
       <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener">
@@ -56,7 +54,6 @@
           <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="currentColor" stroke-width="2"/>
           <path d="M8 8v8h2.8l3.2-4.1V16H16V8h-2.8L10 12.1V8H8z" fill="currentColor"/>
         </svg>
-        블로그
       </a>
     </div>
     <div class="inner">© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</div>
@@ -71,13 +68,13 @@
     <div class="body">
       <div>
         <label for="loginEmail">이메일</label>
-        <input id="loginEmail" type="email" placeholder="you@example.com">
+        <input id="loginEmail" type="email" placeholder="you@example.com" autocomplete="email">
       </div>
       <div>
         <label for="loginPassword">비밀번호</label>
-        <input id="loginPassword" type="password" placeholder="8자 이상">
+        <input id="loginPassword" type="password" placeholder="8자 이상" autocomplete="current-password">
       </div>
-      <div id="loginError" class="error-text"></div>
+      <div id="loginError" class="error-text" style="color:#d00;font-size:13px;"></div>
     </div>
     <div class="actions">
       <button id="btnSignup" class="btn">회원가입</button>
@@ -94,22 +91,30 @@
     <div class="body">
       <div>
         <label for="signupEmail">이메일</label>
-        <input id="signupEmail" type="email" placeholder="you@example.com">
+        <input id="signupEmail" type="email" placeholder="you@example.com" autocomplete="email">
       </div>
       <div>
         <label for="signupPassword">비밀번호 (8자 이상)</label>
-        <input id="signupPassword" type="password" placeholder="8자 이상">
+        <input id="signupPassword" type="password" placeholder="8자 이상" autocomplete="new-password">
       </div>
       <div>
         <label for="signupPassword2">비밀번호 확인</label>
-        <input id="signupPassword2" type="password" placeholder="다시 입력">
+        <input id="signupPassword2" type="password" placeholder="다시 입력" autocomplete="new-password">
       </div>
-      <div id="signupError" class="error-text"></div>
+      <div id="signupError" class="error-text" style="color:#d00;font-size:13px;"></div>
     </div>
     <div class="actions">
       <button id="doSignup" class="btn primary">가입하기</button>
     </div>
   </dialog>
+
+  <!-- 공통 스크립트: firebase 초기화 + auth UI -->
+  <script type="module" src="/assets/js/firebase.js"></script>
+  <script type="module" src="/assets/js/auth-ui.js"></script>
+
+  <!-- 공통 스크립트: firebase 초기화 + auth UI -->
+  <script type="module" src="/assets/js/firebase.js"></script>
+  <script type="module" src="/assets/js/auth-ui.js"></script>
 
   <script type="module">
     import { INSTRUCTORS } from "./assets/js/data.instructors.js";
