--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,10 @@
           <a href="/contact.html" class="active">상담</a>
         </nav>
       </div>
-      <div class="right"></div>
+      <div class="right">
+        <span id="navUser" class="hidden"></span>
+        <button id="btnOpenLogin" class="btn primary">로그인</button>
+      </div>
     </div>
   </header>
 
@@ -192,7 +195,5 @@
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="/assets/js/firebase.js"></script>
   <script type="module" src="/assets/js/auth-ui.js"></script>
-
-  <script type="module" src="./assets/js/app.js"></script>
 </body>
 </html>
