--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,10 @@
           <a href="/contact.html">상담</a>
         </nav>
       </div>
-      <div class="right"></div>
+      <div class="right">
+        <span id="navUser" class="hidden"></span>
+        <button id="btnOpenLogin" class="btn primary">로그인</button>
+      </div>
     </div>
   </header>
 
