--- a/instructors.html
+++ b/instructors.html
@@ -21,9 +21,8 @@
         </nav>
       </div>
       <div class="right">
-        <button id="btnHamburger" class="hamburger" aria-label="메뉴 열기">
-          <span></span><span></span><span></span>
-        </button>
+        <span id="navUser" class="hidden"></span>
+        <button id="btnOpenLogin" class="btn primary">로그인</button>
       </div>
     </div>
   </header>
@@ -107,10 +106,6 @@
       <button id="doSignup" class="btn primary">가입하기</button>
     </div>
   </dialog>
-
-  <!-- 공통 스크립트: firebase 초기화 + auth UI -->
-  <script type="module" src="/assets/js/firebase.js"></script>
-  <script type="module" src="/assets/js/auth-ui.js"></script>
 
   <!-- 공통 스크립트: firebase 초기화 + auth UI -->
   <script type="module" src="/assets/js/firebase.js"></script>
