--- a/gallery.html
+++ b/gallery.html
@@ -133,7 +133,7 @@
     window.addEventListener('keydown',(e)=>{ if(e.key==='Escape') close(); });
   </script>
 
-  <!-- 로그인 모달 -->
+  <!-- 로그인 모달만 남긴다 -->
   <dialog id="loginDialog" class="modal">
     <header>
       <span>로그인</span>
@@ -148,37 +148,10 @@
         <label for="loginPassword">비밀번호</label>
         <input id="loginPassword" type="password" placeholder="8자 이상" autocomplete="current-password">
       </div>
-      <div id="loginError" class="error-text" style="color:#d00;font-size:13px;"></div>
+      <div id="loginError" style="color:#d00;font-size:13px;"></div>
     </div>
     <div class="actions">
-      <button id="btnSignup" class="btn">회원가입</button>
       <button id="doLogin" class="btn primary">로그인</button>
-    </div>
-  </dialog>
-
-  <!-- 회원가입 모달 -->
-  <dialog id="signupDialog" class="modal">
-    <header>
-      <span>회원가입</span>
-      <button data-close class="btn">닫기</button>
-    </header>
-    <div class="body">
-      <div>
-        <label for="signupEmail">이메일</label>
-        <input id="signupEmail" type="email" placeholder="you@example.com" autocomplete="email">
-      </div>
-      <div>
-        <label for="signupPassword">비밀번호 (8자 이상)</label>
-        <input id="signupPassword" type="password" placeholder="8자 이상" autocomplete="new-password">
-      </div>
-      <div>
-        <label for="signupPassword2">비밀번호 확인</label>
-        <input id="signupPassword2" type="password" placeholder="다시 입력" autocomplete="new-password">
-      </div>
-      <div id="signupError" class="error-text" style="color:#d00;font-size:13px;"></div>
-    </div>
-    <div class="actions">
-      <button id="doSignup" class="btn primary">가입하기</button>
     </div>
   </dialog>
 
