--- a/learn.html
+++ b/learn.html
@@ -8,20 +8,41 @@
   <link rel="stylesheet" href="./assets/css/main.css">
   <style>
     .learn-layout{display:grid;grid-template-columns:280px 1fr;gap:24px;align-items:start}
-    .sidebar{border:1px solid var(--border);border-radius:16px;padding:16px;background:#fff}
-    .sidebar h3{margin:0 0 12px;font-size:16px}
-    .sidebar ul{list-style:none;padding:0;margin:0}
-    .sidebar li{padding:8px 0;border-bottom:1px solid var(--border)}
-    .sidebar li:last-child{border-bottom:none}
-    .sidebar a{text-decoration:none;color:#111}
-    .sidebar a:hover{color:var(--brand)}
-    .content{border:1px solid var(--border);border-radius:16px;padding:20px;background:#fff}
-    .welcome{margin-bottom:20px;padding-bottom:16px;border-bottom:1px solid var(--border)}
-    .course-card{border:1px solid var(--border);border-radius:12px;padding:16px;margin-bottom:16px;background:#f9f9f9}
-    .course-card h4{margin:0 0 8px;color:var(--brand)}
-    .course-card p{margin:0 0 12px;color:var(--muted);font-size:14px}
-    .video-container{aspect-ratio:16/9;border:1px solid var(--border);border-radius:12px;overflow:hidden;background:#000}
-    @media (max-width:860px){ .learn-layout{grid-template-columns:1fr} }
+    .learn-aside{border:1px solid var(--border);border-radius:16px;padding:16px;background:#fff}
+    .learn-aside h3{margin:0 0 12px;font-size:16px}
+    .learn-aside ul{list-style:none;padding:0;margin:0}
+    .learn-aside li{padding:8px 0;border-bottom:1px solid var(--border)}
+    .learn-aside li:last-child{border-bottom:none}
+    .learn-aside a{text-decoration:none;color:#111}
+    .learn-aside a:hover{color:var(--brand)}
+    .learn-main{border:1px solid var(--border);border-radius:16px;padding:20px;background:#fff}
+    .learn-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:20px;padding-bottom:16px;border-bottom:1px solid var(--border)}
+    .pill-tabs{display:flex;gap:8px}
+    .pill-tabs .tab{padding:8px 16px;border:1px solid var(--border);border-radius:999px;background:#fff;cursor:pointer;font-weight:600}
+    .pill-tabs .tab.active{background:var(--brand);border-color:var(--brand);color:#fff}
+    .me{display:flex;align-items:center;gap:12px;margin-bottom:16px;padding:12px;background:#f9f9f9;border-radius:8px}
+    .avatar{width:40px;height:40px;border-radius:50%;background:var(--brand);display:flex;align-items:center;justify-content:center;font-size:20px}
+    .info .email{font-weight:600;color:#111}
+    .info .role{font-size:12px;color:var(--muted)}
+    .course-card{border:1px solid var(--border);border-radius:12px;padding:20px;margin-bottom:20px;background:#fff;box-shadow:0 2px 8px rgba(0,0,0,0.04)}
+    .course-card header{margin-bottom:16px}
+    .course-card h3{margin:0 0 8px;color:var(--brand)}
+    .course-card h3 small{color:var(--muted);font-weight:400}
+    .tags{display:flex;gap:8px;margin-top:8px}
+    .tags span{padding:4px 8px;background:#f0f0f0;border-radius:4px;font-size:12px;color:#666}
+    .course-body{display:grid;grid-template-columns:2fr 1fr;gap:20px;align-items:start}
+    .ytwrap{aspect-ratio:16/9;border:1px solid var(--border);border-radius:8px;overflow:hidden;background:#000}
+    .ytwrap iframe{width:100%;height:100%;border:none}
+    .course-side h4{margin:0 0 12px;font-size:14px;color:#111}
+    .weeks{list-style:none;padding:0;margin:0}
+    .weeks li{padding:6px 0;border-bottom:1px solid #f0f0f0;font-size:13px;color:#666}
+    .weeks li:last-child{border-bottom:none}
+    .card-soft{border:1px solid var(--border);border-radius:12px;padding:20px;background:#f9f9f9;text-align:center;color:var(--muted)}
+    @media (max-width:860px){ 
+      .learn-layout{grid-template-columns:1fr} 
+      .course-body{grid-template-columns:1fr}
+      .learn-head{flex-direction:column;align-items:flex-start;gap:12px}
+    }
   </style>
 </head>
 <body>
@@ -47,7 +68,11 @@
 
   <main class="container learn-layout" id="learnRoot">
     <!-- 사이드바 -->
-    <aside class="sidebar">
+    <aside class="learn-aside">
+      <div class="me">
+        <div class="avatar">👤</div>
+        <div class="info"><div id="meEmail" class="email">loading…</div><div class="role">학생</div></div>
+      </div>
       <h3>내 강의실</h3>
       <ul>
         <li><a href="#dashboard">대시보드</a></li>
@@ -59,41 +84,15 @@
     </aside>
 
     <!-- 메인 콘텐츠 -->
-    <div class="content">
-      <div class="welcome">
-        <h2>안녕하세요! <span id="meEmail"></span>님</h2>
-        <p>그릿에듀 학습 관리 시스템에 오신 것을 환영합니다.</p>
+    <section class="learn-main">
+      <div class="learn-head">
+        <h1>내 강의실</h1>
+        <div class="pill-tabs">
+          <button class="tab active">공지/강좌</button>
+        </div>
       </div>
-
-      <!-- 수강 중인 강의 -->
-      <section>
-        <h3>수강 중인 강의</h3>
-        
-        <div class="course-card">
-          <h4>수학 - 미적분 기초</h4>
-          <p>유홍석 선생님 | 진행률: 75%</p>
-          <div class="video-container">
-            <iframe id="yt1" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="course-card">
-          <h4>영어 - 문법 완성</h4>
-          <p>박혜린 선생님 | 진행률: 45%</p>
-          <div class="video-container">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="course-card">
-          <h4>국어 - 독해 전략</h4>
-          <p>강지웅 선생님 | 진행률: 30%</p>
-          <div class="video-container">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
-      </section>
-    </div>
+      <div id="courseList"></div> <!-- ← 강좌 카드가 여기에 렌더 -->
+    </section>
   </main>
 
   <!-- 하단 SNS 공통 -->
@@ -119,7 +118,7 @@
 
   <footer><div class="inner">© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</div></footer>
 
-  <!-- 로그인 모달 -->
+  <!-- 로그인 모달만 남긴다 -->
   <dialog id="loginDialog" class="modal">
     <header>
       <span>로그인</span>
@@ -134,37 +133,10 @@
         <label for="loginPassword">비밀번호</label>
         <input id="loginPassword" type="password" placeholder="8자 이상" autocomplete="current-password">
       </div>
-      <div id="loginError" class="error-text" style="color:#d00;font-size:13px;"></div>
+      <div id="loginError" style="color:#d00;font-size:13px;"></div>
     </div>
     <div class="actions">
-      <button id="btnSignup" class="btn">회원가입</button>
       <button id="doLogin" class="btn primary">로그인</button>
-    </div>
-  </dialog>
-
-  <!-- 회원가입 모달 -->
-  <dialog id="signupDialog" class="modal">
-    <header>
-      <span>회원가입</span>
-      <button data-close class="btn">닫기</button>
-    </header>
-    <div class="body">
-      <div>
-        <label for="signupEmail">이메일</label>
-        <input id="signupEmail" type="email" placeholder="you@example.com" autocomplete="email">
-      </div>
-      <div>
-        <label for="signupPassword">비밀번호 (8자 이상)</label>
-        <input id="signupPassword" type="password" placeholder="8자 이상" autocomplete="new-password">
-      </div>
-      <div>
-        <label for="signupPassword2">비밀번호 확인</label>
-        <input id="signupPassword2" type="password" placeholder="다시 입력" autocomplete="new-password">
-      </div>
-      <div id="signupError" class="error-text" style="color:#d00;font-size:13px;"></div>
-    </div>
-    <div class="actions">
-      <button id="doSignup" class="btn primary">가입하기</button>
     </div>
   </dialog>
 
